Modified movement of animals so maps work. Deleted outdated classes, tests. Minor bug fixes.